force-app/main/default/objects/Volunteer_Group__c/Volunteer_Group__c.object-meta.xml
<CustomObject>
    <label>Volunteer Group</label>
    <nameField>
        <label>Volunteer Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Groups</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>