force-app/main/default/objects/Volunteer_Group__c/fields/AMS_Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>AMS_Volunteer_ID__c</fullName>
    <externalId>true</externalId>
    <label>AMS Volunteer ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>