force-app/main/default/objects/Volunteer_Group__c/fields/Bylaws_Change__c.field-meta.xml
<CustomField>
    <fullName>Bylaws_Change__c</fullName>
    <label>Bylaws Change</label>
    <type>Date</type>
</CustomField>