force-app/main/default/objects/Volunteer_Group__c/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <label>Customer Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COMM</fullName>
            </value>
            <value>
                <fullName>TASK</fullName>
            </value>
            <value>
                <fullName>AWARDS</fullName>
            </value>
            <value>
                <fullName>WORK</fullName>
            </value>
            <value>
                <fullName>BOARD</fullName>
            </value>
            <value>
                <fullName>COMMUNITY</fullName>
            </value>
            <value>
                <fullName>CHPTR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>