force-app/main/default/objects/Volunteer_Group__c/fields/Former_Name__c.field-meta.xml
<CustomField>
    <fullName>Former_Name__c</fullName>
    <label>Former Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>