force-app/main/default/objects/Volunteer_Group__c/fields/IL_SOS_File__c.field-meta.xml
<CustomField>
    <fullName>IL_SOS_File__c</fullName>
    <label>IL SOS File #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>