force-app/main/default/objects/Volunteer_Group__c/fields/Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Incorporation__c</fullName>
    <label>Incorporation #</label>
    <length>12</length>
    <type>Text</type>
</CustomField>