force-app/main/default/objects/Volunteer_Group__c/fields/Info_Email__c.field-meta.xml
<CustomField>
    <fullName>Info_Email__c</fullName>
    <label>Info Email</label>
    <type>Email</type>
</CustomField>