force-app/main/default/objects/Volunteer_Group__c/fields/President_Email__c.field-meta.xml
<CustomField>
    <fullName>President_Email__c</fullName>
    <label>President Email</label>
    <type>Email</type>
</CustomField>