force-app/main/default/objects/Volunteer_Group__c/fields/Reporting_Code__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Code__c</fullName>
    <label>Reporting Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>