force-app/main/default/objects/Volunteer_Group__c/fields/Staff_POC__c.field-meta.xml
<CustomField>
    <fullName>Staff_POC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff POC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Volunteer_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>