force-app/main/default/objects/Volunteer_Group__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <label>Territory</label>
    <type>TextArea</type>
</CustomField>