force-app/main/default/objects/Volunteer_Group__c/fields/Volunteer_Group_18_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Group_18_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Volunteer Group 18 ID</label>
    <type>Text</type>
</CustomField>