force-app/main/default/objects/Volunteer_Group__c/recordTypes/Chapter.recordType-meta.xml
<RecordType>
    <fullName>Chapter</fullName>
    <active>true</active>
    <label>Chapter</label>
</RecordType>