force-app/main/default/objects/Volunteer_Group__c/recordTypes/Community.recordType-meta.xml
<RecordType>
    <fullName>Community</fullName>
    <active>true</active>
    <label>Community</label>
</RecordType>